--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
         <div class="container-fluid">
             <div class="row" style="width: 1980px;">
                 <div class="col-3" style="margin-top: 10px;">
-                    <h2 style="color:white">AskVK</h2>
+                    <h2><a href = "index.html">AskVK</a></h2>
                 </div>
                 <div class="col-7" style="margin-top:8px;">
                     <div class="row">
@@ -34,7 +34,7 @@
                             </div>
                         </div>
                         <div class="col-8">
-                            <button class="btn btn-outline-success" type="button" style="text-align:center;">ASK!</button>
+                            <button onclick="document.location = 'ask.html'" class="btn btn-outline-success" type="button">ASK!</button>
                         </div>
                     </div>
                 </div>
@@ -75,7 +75,7 @@
                             </div>
                         </div>
                         <div class="col-10">
-                            <h2 class="question-title">Question 1</h2>
+                            <h2 class="question-title"><a href = "question.html">Question 1</a></h2>
                             <div class="question-text">
                                 Text voprosa nomer 1
                             </div>
@@ -95,7 +95,7 @@
                             </div>
                         </div>
                         <div class="col-3">
-                            <a class="nav-link active" aria-current="page" href="#" style="margin-top: 30px">answer(1)</a>
+                            <a class="nav-link active" aria-current="page" href="question.html" style="margin-top: 30px">answer(1)</a>
                         </div>
                         <div class="col-5">
                             <div class="qtag">
@@ -119,7 +119,7 @@
                             </div>
                         </div>
                         <div class="col-10" style=>
-                            <h2 class="question-title">Question 2</h2>
+                            <h2 class="question-title"><a href = "question.html">Question 2</a></h2>
                             <div class="question-text">
                                 Text voprosa nomer 2
                             </div>
@@ -139,7 +139,7 @@
                             </div>
                         </div>
                         <div class="col-3">
-                            <a class="nav-link active" aria-current="page" href="#" style="margin-top: 30px">answer(2)</a>
+                            <a class="nav-link active" aria-current="page" href="question.html" style="margin-top: 30px">answer(2)</a>
                         </div>
                         <div class="col-5">
                             <div class="qtag">
@@ -166,7 +166,7 @@
                             </div>
                         </div>
                         <div class="col-10">
-                            <h2 class="question-title">Question 3</h2>
+                            <h2 class="question-title"><a href = "question.html">Question 3</a></h2>
                             <div class="question-text">
                                 Text voprosa nomer 3
                             </div>
@@ -186,7 +186,7 @@
                             </div>
                         </div>
                         <div class="col-3">
-                            <a class="nav-link active" aria-current="page" href="#" style="margin-top: 30px">answer(3)</a>
+                            <a class="nav-link active" aria-current="page" href="question.html" style="margin-top: 30px">answer(3)</a>
                         </div>
                         <div class="col-5">
                             <div class="qtag">
