--- a/templates/question.html
+++ b/templates/question.html
@@ -15,7 +15,7 @@
         <div class="container-fluid">
             <div class="row" style="width: 1920px;">
                 <div class="col-3">
-                    <h2 style="color:white">AskVK</h2>
+                    <h2><a href = "index.html">AskVK</a></h2>
                 </div>
                 <div class="col-7" style="margin-top:4px;">
                     <div class="row">
@@ -34,17 +34,17 @@
                             </div>
                         </div>
                         <div class="col-8">
-                            <button class="btn btn-outline-success" type="button">ASK!</button>
+                            <button onclick="document.location = 'ask.html'" class="btn btn-outline-success" type="button">ASK!</button>
                         </div>
                     </div>
                 </div>
                 <div class="col-2">
                     <div class="row" style="  margin: 10px;">
                         <div class="col-6">
-                            <div class="fs-6" style="color:white">Register</div>
+                            <div class="fs-6"><a href = "register.html">Register</a></div>
                         </div>
                         <div class="col-6">
-                            <div class="fs-6" style="color:white">Log in</div>
+                            <div class="fs-6"><a href = "login.html">Log in</a></div>
                         </div>
                     </div>
                 </div>
