--- a/templates/ask.html
+++ b/templates/ask.html
@@ -13,7 +13,7 @@
     <!-- Fixed navbar -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
-            <div class="row" style="width: 1920px;">
+            <div class="row" style="width: 100%;">
                 <div class="col-3">
                     <h2><a href = "index.html">AskVK</a></h2>
                 </div>
@@ -59,21 +59,23 @@
             <div class="col-8" style=" margin-top:30px">
                 <h1 style=" margin-bottom:30px;">New Question</h1>
                 <h5 style="color:red; margin-top:20px; margin-bottom: 20px">Some mistakes!</h5>
-                <div class="mb-3">
-                    <label for="exampleFormControlInput1" class="form-label">Title</label>
-                    <input type="text" class="form-control" id="exampleFormControlInput1"
-                           placeholder="Title">
-                </div>
-                <div class="mb-3">
-                    <label for="exampleFormControlTextarea2" class="form-label">Text</label>
-                    <textarea class="form-control" id="exampleFormControlTextarea2" rows="6"></textarea>
-                </div>
-                <div class="mb-3">
-                    <label for="exampleFormControlInput3" class="form-label">Tags</label>
-                    <input type="text" class="form-control" id="exampleFormControlInput3"
-                           placeholder="Tags">
-                </div>
-                <div class="StandardButton">Ask!</div>
+                <form>
+                    <div class="mb-3">
+                        <label for="exampleFormControlInput1" class="form-label">Title</label>
+                        <input type="text" class="form-control" id="exampleFormControlInput1"
+                               placeholder="Title">
+                    </div>
+                    <div class="mb-3">
+                        <label for="exampleFormControlTextarea2" class="form-label">Text</label>
+                        <textarea class="form-control" id="exampleFormControlTextarea2" rows="6"></textarea>
+                    </div>
+                    <div class="mb-3">
+                        <label for="exampleFormControlInput3" class="form-label">Tags</label>
+                        <input type="text" class="form-control" id="exampleFormControlInput3"
+                               placeholder="Tags">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Ask!</button>
+                </form>
             </div>
             <div class="col-4" style="padding-right: 2px;">
                 <div class="container_t" style="margin-bottom:20px;">
