--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
     <!-- Fixed navbar -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
-            <div class="row" style="width: 1980px;">
+            <div class="row" style="width: 100%;">
                 <div class="col-3" style="margin-top: 10px;">
                     <h2><a href = "index.html">AskVK</a></h2>
                 </div>
@@ -208,13 +208,15 @@
                         </div>
                     </div>
                 </div>
-                <ul class="pagination">
-                    <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-                    <li class="page-item"><a class="page-link" href="#">1</a></li>
-                    <li class="page-item"><a class="page-link" href="#">2</a></li>
-                    <li class="page-item"><a class="page-link" href="#">3</a></li>
-                    <li class="page-item"><a class="page-link" href="#">Next</a></li>
-                </ul>
+                <div>
+                    <ul class="pagination">
+                        <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+                        <li class="page-item"><a class="page-link" href="#">1</a></li>
+                        <li class="page-item"><a class="page-link" href="#">2</a></li>
+                        <li class="page-item"><a class="page-link" href="#">3</a></li>
+                        <li class="page-item"><a class="page-link" href="#">Next</a></li>
+                    </ul>
+                </div>
             </div>
             <div class="col-4" style="padding-right: 2px;">
                 <div class="container_t" style="margin-bottom:20px;">
