--- a/templates/login.html
+++ b/templates/login.html
@@ -13,7 +13,7 @@
     <!-- Fixed navbar -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
-            <div class="row" style="width: 1920px;">
+            <div class="row" style="width: 100%;">
                 <div class="col-3">
                     <h2><a href = "index.html">AskVK</a></h2>
                 </div>
@@ -59,19 +59,23 @@
             <div class="col-8" style=" margin-top:30px;">
                 <h1>Login</h1>
                 <h5 style="color:red; margin-top:20px; margin-bottom: 20px">Some mistake!</h5>
-                <div class="mb-3">
-                    <label for="exampleFormControlInput0" class="form-label">Login</label>
-                    <input type="text" class="form-control" id="exampleFormControlInput0"
-                           placeholder="Your nickname">
-                </div>
-                <div class="mb-3">
-                    <label for="exampleFormControlInput1" class="form-label">Password</label>
-                    <input type="text" class="form-control" id="exampleFormControlInput1"
-                           placeholder="******">
-                </div>
+                <form>
+                    <div class="mb-3">
+                        <label for="exampleFormControlInput0" class="form-label">Login</label>
+                        <input type="text" class="form-control" id="exampleFormControlInput0"
+                               placeholder="Your nickname">
+                    </div>
+                    <div class="mb-3">
+                        <label for="exampleFormControlInput1" class="form-label">Password</label>
+                        <input type="text" class="form-control" id="exampleFormControlInput1"
+                               placeholder="******">
+                    </div>
+                    <div class="ContainerWhite" style="margin-top:30px;">
+                        <button type="submit" class="btn btn-primary">Log in!</button>
+                    </div>
+                </form>
                 <div class="ContainerWhite" style="margin-top:30px;">
-                    <div class="StandardButton">Log in!</div>
-                    <a href="register.html" class="link-primary" style="margin-top:5px; margin-left: 30px">Create new account!</a>
+                    <a href="register.html" class="link-primary" style="margin-top:5px;">Create new account!</a>
                 </div>
             </div>
             <div class="col-4" style="padding-right: 2px;">
