--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,15 @@
 <!doctype html>
+
+{% load static %}
+
 <html lang="en" class="h-100" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MainPage</title>
-    <link href="../static/css/bootstrap.css" rel="stylesheet">
+    <link href="{% static "css/bootstrap.css" %}" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="../static/css/style.css" rel="stylesheet">
+    <link href="{% static "css/style.css" %}" rel="stylesheet">
 </head>
 <body class="d-flex flex-column h-100">
 <header>
@@ -15,7 +18,7 @@
         <div class="container-fluid">
             <div class="row" style="width: 100%;">
                 <div class="col-3" style="margin-top: 10px;">
-                    <h2><a href = "index.html">AskVK</a></h2>
+                    <h2><a href = "{% url 'index' %}">AskVK</a></h2>
                 </div>
                 <div class="col-7" style="margin-top:8px;">
                     <div class="row">
@@ -42,7 +45,7 @@
                     <div class="row">
                         <div class="col-2">
                             <div class="avatar_50">
-                                <img src="../static/img/avatar-1.jpg" alt=""/>
+                                <img src="{% static "img/avatar-1.jpg" %}" alt=""/>
                             </div>
                         </div>
                         <div class="col-10" style="padding-left:30px;">
@@ -71,7 +74,7 @@
                     <div class="row">
                         <div class="col-2">
                             <div class="avatar_100">
-                                <img src="../static/img/avatar-1.jpg" alt=""/>
+                                <img src="{% static "img/avatar-1.jpg" %}" alt=""/>
                             </div>
                         </div>
                         <div class="col-10">
@@ -115,7 +118,7 @@
                     <div class="row">
                         <div class="col-2">
                             <div class="avatar_100">
-                                <img src="../static/img/avatar-2.jpg" alt=""/>
+                                <img src="{% static "img/avatar-2.jpg" %}" alt=""/>
                             </div>
                         </div>
                         <div class="col-10" style=>
@@ -162,7 +165,7 @@
                     <div class="row">
                         <div class="col-2">
                             <div class="avatar_100">
-                                <img src="../static/img/avatar-3.jpg" alt=""/>
+                                <img src="{% static "img/avatar-3.jpg" %}" alt=""/>
                             </div>
                         </div>
                         <div class="col-10">
