--- a/templates/index.html
+++ b/templates/index.html
@@ -1,66 +1,7 @@
-<!doctype html>
-
+{% extends "inc/base.html" %}
 {% load static %}
 
-<html lang="en" class="h-100" xmlns="http://www.w3.org/1999/html">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>MainPage</title>
-    <link href="{% static "css/bootstrap.css" %}" rel="stylesheet">
-    <!-- Custom styles for this template -->
-    <link href="{% static "css/style.css" %}" rel="stylesheet">
-</head>
-<body class="d-flex flex-column h-100">
-<header>
-    <!-- Fixed navbar -->
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <div class="container-fluid">
-            <div class="row" style="width: 100%;">
-                <div class="col-3" style="margin-top: 10px;">
-                    <h2><a href = "{% url 'index' %}">AskVK</a></h2>
-                </div>
-                <div class="col-7" style="margin-top:8px;">
-                    <div class="row">
-                        <div class="col-4">
-                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#navbarCollapse" aria-controls="navbarCollapse"
-                                    aria-expanded="false" aria-label="Toggle navigation">
-                                <span class="navbar-toggler-icon"></span>
-                            </button>
-                            <div class="collapse navbar-collapse" id="navbarCollapse">
-                                <form class="d-flex" role="search">
-                                    <input class="form-control me-2" type="search" placeholder="Search"
-                                           aria-label="Search">
-                                    <button class="btn btn-outline-success" type="submit" style="text-align:center;">SEARCH!</button>
-                                </form>
-                            </div>
-                        </div>
-                        <div class="col-8">
-                            <button onclick="document.location = 'ask.html'" class="btn btn-outline-success" type="button">ASK!</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-2">
-                    <div class="row">
-                        <div class="col-2">
-                            <div class="avatar_50">
-                                <img src="{% static "img/avatar-1.jpg" %}" alt=""/>
-                            </div>
-                        </div>
-                        <div class="col-10" style="padding-left:30px;">
-                            <h5 style="color:white">Admin</h5>
-                            <div class="ContainerBlack" style="color:white">
-                                <div class="HeaderTextSmall">Settings</div>
-                                <div class="HeaderTextSmall">Log out</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </nav>
-</header>
+{% block content %}
 <!-- Begin page content -->
 <main class="flex-shrink-0">
     <div class="container_q">
@@ -211,45 +152,6 @@
                         </div>
                     </div>
                 </div>
-                <div>
-                    <ul class="pagination">
-                        <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-                        <li class="page-item"><a class="page-link" href="#">1</a></li>
-                        <li class="page-item"><a class="page-link" href="#">2</a></li>
-                        <li class="page-item"><a class="page-link" href="#">3</a></li>
-                        <li class="page-item"><a class="page-link" href="#">Next</a></li>
-                    </ul>
-                </div>
+                {% include "inc/paginator.html" %}
             </div>
-            <div class="col-4" style="padding-right: 2px;">
-                <div class="container_t" style="margin-bottom:20px;">
-                    <h1>Popular tags</h1>
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item">Tag0</li>
-                        <li class="list-group-item">Tag1</li>
-                        <li class="list-group-item">Tag2</li>
-                        <li class="list-group-item">Tag3</li>
-                        <li class="list-group-item">Tag4</li>
-                    </ul>
-                </div>
-                <div class="container_t" style="margin-bottom:20px;">
-                    <h1>Best members</h1>
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item">Admin</li>
-                        <li class="list-group-item">User0</li>
-                        <li class="list-group-item">User1</li>
-                        <li class="list-group-item">User2</li>
-                        <li class="list-group-item">User3</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-</main>
-<footer class="footer mt-auto py-3 bg-light">
-    <div class="container">
-        <span class="text-muted">Kuparenkov Ilya ANDR-11</span>
-    </div>
-</footer>
-</body>
-</html>
+{% endblock %}
