--- a/templates/login.html
+++ b/templates/login.html
@@ -1,57 +1,6 @@
-<!doctype html>
-<html lang="en" class="h-100">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>LoginPage</title>
-    <link href="../static/css/bootstrap.css" rel="stylesheet">
-    <!-- Custom styles for this template -->
-    <link href="../static/css/style.css" rel="stylesheet">
-</head>
-<body class="d-flex flex-column h-100">
-<header>
-    <!-- Fixed navbar -->
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <div class="container-fluid">
-            <div class="row" style="width: 100%;">
-                <div class="col-3">
-                    <h2><a href = "index.html">AskVK</a></h2>
-                </div>
-                <div class="col-7" style="margin-top:4px;">
-                    <div class="row">
-                        <div class="col-4">
-                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#navbarCollapse" aria-controls="navbarCollapse"
-                                    aria-expanded="false" aria-label="Toggle navigation">
-                                <span class="navbar-toggler-icon"></span>
-                            </button>
-                            <div class="collapse navbar-collapse" id="navbarCollapse">
-                                <form class="d-flex" role="search">
-                                    <input class="form-control me-2" type="search" placeholder="Search"
-                                           aria-label="Search">
-                                    <button class="btn btn-outline-success" type="submit">SEARCH!</button>
-                                </form>
-                            </div>
-                        </div>
-                        <div class="col-8">
-                            <button onclick="document.location = 'ask.html'" class="btn btn-outline-success" type="button">ASK!</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-2">
-                    <div class="row" style="  margin: 10px;">
-                        <div class="col-6">
-                            <div class="fs-6"><a href = "register.html">Register</a></div>
-                        </div>
-                        <div class="col-6">
-                            <div class="fs-6"><a href = "login.html">Log in</a></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </nav>
-</header>
+{% extends "inc/base.html" %}
+{% load static %}
+{% block content %}
 <!-- Begin page content -->
 <main class="flex-shrink-0">
     <div class="container_q">
@@ -75,38 +24,7 @@
                     </div>
                 </form>
                 <div class="ContainerWhite" style="margin-top:30px;">
-                    <a href="register.html" class="link-primary" style="margin-top:5px;">Create new account!</a>
+                    <a href="{% url 'register' %}" class="link-primary" style="margin-top:5px;">Create new account!</a>
                 </div>
             </div>
-            <div class="col-4" style="padding-right: 2px;">
-                <div class="container_t" style="margin-bottom:20px;">
-                    <h1>Popular tags</h1>
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item">Tag0</li>
-                        <li class="list-group-item">Tag1</li>
-                        <li class="list-group-item">Tag2</li>
-                        <li class="list-group-item">Tag3</li>
-                        <li class="list-group-item">Tag4</li>
-                    </ul>
-                </div>
-                <div class="container_t" style="margin-bottom:20px;">
-                    <h1>Best members</h1>
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item">Admin</li>
-                        <li class="list-group-item">User0</li>
-                        <li class="list-group-item">User1</li>
-                        <li class="list-group-item">User2</li>
-                        <li class="list-group-item">User3</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-</main>
-<footer class="footer mt-auto py-3 bg-light">
-    <div class="container">
-        <span class="text-muted">Kuparenkov Ilya ANDR-11</span>
-    </div>
-</footer>
-</body>
-</html>
+{% endblock %}
